Sat Nov 28 18:00:50 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLinkWatchdog_T.h:
        * dds/DCPS/transport/framework/TransportReceiveStrategy.cpp:
        * dds/DCPS/transport/multicast/BestEffortMulticast.cpp:

          Fixed GCC warnings introduced by merge.

Sat Nov 28 00:23:46 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * MPC/config/dcps_multicast.mpb:
        * dds/DCPS/DisjointSequence.h:
        * dds/DCPS/DisjointSequence.inl:
        * dds/DCPS/DisjointSequence.cpp:
        * dds/DCPS/WriteDataContainer.cpp:
        * dds/DCPS/transport/framework/BuildChainVisitor.cpp:
        * dds/DCPS/transport/framework/CopyChainVisitor.h:
        * dds/DCPS/transport/framework/CopyChainVisitor.inl:
        * dds/DCPS/transport/framework/CopyChainVisitor.cpp:
        * dds/DCPS/transport/framework/DataLink.h:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLinkWatchdog_T.h:
        * dds/DCPS/transport/framework/NetworkAddress.h:
        * dds/DCPS/transport/framework/NetworkAddress.inl:
        * dds/DCPS/transport/framework/PacketRemoveVisitor.h:
        * dds/DCPS/transport/framework/PacketRemoveVisitor.cpp:
        * dds/DCPS/transport/framework/QueueRemoveVisitor.h:
        * dds/DCPS/transport/framework/QueueRemoveVisitor.inl:
        * dds/DCPS/transport/framework/QueueRemoveVisitor.cpp:
        * dds/DCPS/transport/framework/ReceiveListenerSet.inl:
        * dds/DCPS/transport/framework/ThreadPerConRemoveVisitor.cpp:
        * dds/DCPS/transport/framework/TransportConfiguration.h:
        * dds/DCPS/transport/framework/TransportConfiguration.inl:
        * dds/DCPS/transport/framework/TransportConfiguration.cpp:
        * dds/DCPS/transport/framework/TransportControlElement.h:
        * dds/DCPS/transport/framework/TransportControlElement.cpp: